--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,1 +1,6 @@
 FROM kossnocorp/dev-rust:latest
+
+# Ensure directories to mount into
+RUN mkdir -p "$HOME/.local" && \
+  mkdir -p "$HOME/.cargo" && \
+  mkdir -p "$HOME/.codex"
