--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xeval",
+  "name": "xeval-root",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -7,5 +7,8 @@
   "keywords": [],
   "author": "Sasha Koss <koss@nocorp.me>",
   "license": "MIT",
-  "packageManager": "pnpm@10.15.1"
+  "packageManager": "pnpm@10.15.1",
+  "devDependencies": {
+    "prettier": "^3.6.2"
+  }
 }
