--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /target/
 # Node.js
 node_modules/
-/.pnpm-store
+/.pnpm-store/
 # Dev Container
-/.devcontainer/state
+/.devcontainer/state/
+# Temp
+/tmp/
