--- a/pkgs/cli/Cargo.toml
+++ b/pkgs/cli/Cargo.toml
@@ -10,3 +10,11 @@ repository = "https://github.com/kossnocorp/xeval"
 [[bin]]
 name = "xeval"
 path = "src/main.rs"
+
+[dependencies]
+anyhow = "1.0.99"
+clap = { version = "4.5.47", features = ["derive"] }
+config = "0.15.15"
+dialoguer = "0.12.0"
+serde = { version = "1.0.219", features = ["derive"] }
+thiserror = "2.0.16"
