--- a/pkgs/openai/Cargo.toml
+++ b/pkgs/openai/Cargo.toml
@@ -19,3 +19,6 @@ dirs = "5.0.1"
 xeval_global = { version = "0.1.0", path = "../global" }
 reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
 toml_edit = "0.23.4"
+serde_json = "1.0.132"
+litty = "0.2.0"
+ordered-float = { version = "5.0.0", features = ["serde"] }
