--- a/pkgs/project/Cargo.toml
+++ b/pkgs/project/Cargo.toml
@@ -17,3 +17,6 @@ thiserror = "2.0.16"
 toml = { version = "0.8.19", features = ["parse", "display"] }
 dirs = "5.0.1"
 # xeval_global = { path = "../global" }
+toml_edit = "0.23.4"
+serde_yaml = "0.9"
+serde_json = "1.0"
